# Sodalite

./: .gitignore  LICENSE  Makefile  README.en.md  README.md  bump-version.ps1  run.ps1
backend/: pyproject.toml
backend/src/sdapp_backend/api/: system.py
backend/src/sdapp_backend/inference/: imported_models_store.py  model_registry.py  pipeline_manager.py
backend/src/sdapp_backend/schemas/: generation.py
backend/src/sodalite_backend/: main.py
backend/src/sodalite_backend/api/: generation.py  system.py
backend/src/sodalite_backend/inference/: imported_loras_store.py  imported_models_store.py  known_hf_models_store.py  lora_registry.py  model_registry.py  pipeline_manager.py
backend/src/sodalite_backend/schemas/: generation.py
backend/tests/: test_api_generation.py  test_model_registry.py  test_pipeline_manager.py
frontend/SDApp/: MainWindow.xaml  MainWindow.xaml.cs
frontend/SDApp/Models/: GenerationRequest.cs
frontend/SDApp/Services/: BackendApiClient.cs  BackendProcessManager.cs  JobObject.cs
frontend/SDApp/ViewModels/: GenerationViewModel.cs
frontend/SDApp/Views/: GenerationPage.xaml  GenerationPage.xaml.cs  ModelSelectionDialog.xaml  ModelSelectionDialog.xaml.cs
frontend/Sodalite/: MainWindow.xaml  MainWindow.xaml.cs  Sodalite.csproj  app.manifest
frontend/Sodalite/Models/: GenerationRequest.cs  LoraFileInfo.cs
frontend/Sodalite/Services/: BackendApiClient.cs
frontend/Sodalite/ViewModels/: GenerationViewModel.cs  SelectedLoraViewModel.cs
installer/: SDApp.nsi  Sodalite.nsi  build-installer.ps1
(+7 files in other folders)
